--- a/src/html_template.html
+++ b/src/html_template.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="utf-8"/>
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles.css"/>
 </head>
 <body>
-    <div>
-        Hello
-    </div>
+    <h1 class="title">
+        mini.remoted.io
+    </h1>
+    <p class="subtitle">List of remote jobs based on <a href="https://remoted.io/graphql">https://remoted.io/graphql</a>
+    </p>
     $$JOBS$$
 </body>
 </html>
